--- a/reports/qmd_example.html
+++ b/reports/qmd_example.html
@@ -53,7 +53,7 @@ div.csl-indent {
 <link href="qmd_example_files/libs/quarto-html/quarto-syntax-highlighting-549806ee2085284f45b00abea8c6df48.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="qmd_example_files/libs/bootstrap/bootstrap.min.js"></script>
 <link href="qmd_example_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="qmd_example_files/libs/bootstrap/bootstrap-973236bd072d72a04ee9cd82dcc9cb29.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="qmd_example_files/libs/bootstrap/bootstrap-9c06b7fd1cdcb6f7e05e3d516f2ebe21.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
   <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
@@ -85,6 +85,7 @@ window.Quarto = {
 };
 </script>
 
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
